--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "dev": "wrangler dev",
     "predeploy": "wrangler d1 migrations apply DB --remote",
     "seedLocalD1": "wrangler d1 migrations apply DB --local"
+  },
+  "dependencies": {
+    "hashids": "^2.3.0"
   }
 }
