--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
   },
   "dependencies": {
     "hashids": "^2.3.0"
-  }
+  },
+  "packageManager": "pnpm@8.9.2+sha1.5f2fa48d614263457cf5d7fb7be8b878da318d87"
 }
